# paulson-ocaml

./: .gitignore  README.md  dune-project
src/: array_ops.ml  array_ops.mli  array_sig.ml  dune  lazy.ml  order.ml  pqueue.ml  queue.ml  queue_sig.ml  tautology_checker.ml  tester.ml  tree.ml  tree.mli  tree_sig.ml
src/ch-8/: basic.ml  basic.mli  basic_sig.ml  dune  lexer.ml  lexer.mli  parser.ml  types.ml
src/ch9/: basic.mli  lexer.ml  lexer.mli  main.ml  parser.ml  parser.mli  types.ml
